--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,14 @@ en:
       type: "%{type} account"
       show:
         total: "Total: %{balance}%{currency}"
+    transaction:
+      show:
+        title: "Transaction #%{number} details"
+        status: "Status"
+        amount: "Amount"
+        from_account: "From account"
+        payed_to: "Payed to"
+        date: "Date"
   activerecord:
     attributes:
       user:
@@ -56,6 +64,12 @@ en:
           checking: "Checking"
         balance_cents: "Balance"
         currency: "Currency"
+      transaction:
+        status:
+          pending: "Pending"
+          cancelled: "Cancelled"
+          completed: "Completed"
+          failed: "Failed"
     errors:
       models:
         user:
@@ -65,3 +79,5 @@ en:
   errors:
     unauthorized: "Unauthorized access, if is an error please contact customer support"
     general: "Something went wrong with your last operation, please contact customer support"
+  actions:
+    back: "Back"
